--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,17 @@
     "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/compat": "5.1.25",
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/stack": "6.2.1",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "^0.67.16",
+    "axios": "^1.1.3",
+    "country-iso-2-to-3": "^1.1.0",
     "expo": "45.0.0",
     "expo-app-loading": "2.0.0",
     "expo-asset": "8.5.0",
@@ -26,12 +31,22 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animated-numbers": "^0.4.1",
+    "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "2.2.1",
     "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
+    "react-native-pages": "^0.9.0",
+    "react-native-paper": "^5.0.0-rc.8",
     "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "3.11.1",
-    "react-native-svg": "12.3.0"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "rn-country-dropdown-picker": "^2.1.8",
+    "typescript": "~4.3.5"
   },
   "devDependencies": {
     "babel-eslint": "10.0.3",
