--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/drawer": "6.4.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/stack": "6.2.1",
+    "axios": "^1.1.3",
     "expo": "45.0.0",
     "expo-app-loading": "2.0.0",
     "expo-asset": "8.5.0",
     "expo-font": "10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-modules-core": "0.9.2",
     "galio-framework": "0.8.0",
     "prop-types": "15.7.2",
